// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package logo;

// The greeting service definition.
service LogoDataProto {
  // Sends a greeting
  rpc get_data (LogoDataRequest) returns (LogoDataResponse) {}
}

message LogoDataRequest {
  string codeforces = 1;
  string topcoder = 2;
  string nike_username = 3;
  string nike_password = 4;
}

message LogoDataResponse {
  int32 codeforces = 1;
  int32 topcoder = 2;
  double nike_distance = 3;
  int32 nike_activities = 4;
}
